# attributivegettext

./: .gitignore  LICENSE  README.md  messages.po  pyproject.toml  sample_application.py  tests.py  translations.py
.github/workflows/: test-with-coverage.yaml
locale/pl/LC_MESSAGES/: messages.mo
