[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "attributivegettext"
author = "Maciej Olko"
author-email = "maciej.olko@gmail.com"
home-page = "https://github.com/m-aciek/attributivegettext"
classifiers = ["License :: OSI Approved :: MIT License"]

